<resources>
    <string name="app_name">Listeet</string>

    <string name="go_premium">Go Premium!</string>
    <string name="go_premium_description">Unlimited access to all features</string>
    <string name="main_toolbar_title">My Lists</string>
    <string name="toolbar_account_button">toolbar account btn</string>
    <string name="add_list_button">add list btn</string>
    <string name="menu_icon">menu icon</string>
    <string name="goo_icon">goo_icon</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="close_button">close_button</string>
    <string name="signin_dialog_msg">Sign in or Sign up to sync your lists across all your devices</string>
    <string name="menu">menu</string>
    <string name="scan">scan</string>
    <string name="premium_icon">premium_icon</string>
    <string name="cam_permission_grant_btn">GRANT ACCESS</string>
    <string name="cam_permission_deny_btn">no thanks</string>
    <string name="settings">Settings</string>
    <string name="pick_duration">keep it in trash for:</string>
    <string name="my_cards">My Loyalty Cards</string>
    <string name="scanner_prompt">for flashlight use volume keys</string>
    <string name="Add_loyalty_card">Add card</string>
    <string name="Edit_loyalty_card">Edit card</string>
    <string name="cam_permission_message">to scan product\'s barcode\nthe app needs your permission to access the camera</string>
    <string name="royalcard_permission_message">to scan your loyal cards, the app needs your permission to access the camera</string>
    <string name="need_permission_to_access_camera_nclick_here_to_grant_access">Need permission to access camera\nClick here to grant access</string>
    <string name="loyalty_card_barcode_view">loyalty_card_barcode_view</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="turn_on_scanner_icon">turn_on_scanner_icon</string>
    <string name="card_number">Card number</string>
    <string name="or_enter_the_code_manually">Or enter the code manually</string>
    <string name="scan_the_barcode">Scan the barcode</string>
    <string name="add_loyalty_card">add_loyalty_card</string>
    <string name="edit_card_btn">edit_card_btn</string>
    <string name="card">card</string>
    <string name="show_category">Show category</string>
    <string name="hide_category">Hide category</string>

    <string-array name="duration">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>6 month</item>
        <item>year</item>
        <item>forever</item>
        <item>never</item>
    </string-array>

    <string-array name="colors">
        <item>R.color.purple_200</item>
        <item>R.color.purple_500</item>
        <item>R.color.purple_700</item>
        <item>R.color.teal_200</item>
        <item>R.color.teal_700</item>
        <item>R.color.white</item>
        <item>R.color.black</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blacklist">Blacklist</string>
    <string name="flag_imgview">flag_imgview</string>
    <string name="add_country_btn">add_country_btn</string>
    <string name="add_manufact_to_blacklist">add manufacturer to blacklist</string>
    <string name="add_manufacturer">Add manufacturer</string>
    <string name="company_manufacturer_name">Company/Manufacturer name</string>
    <string name="enter_barcode_number">Enter barcode number</string>
    <string name="add">Add</string>
    <string name="gs1_country_list">gs_one_country_list</string>
    <string name="manufactName">Manufacturer: %1$s</string>
    <string name="manufactCode">Code: %1$s</string>
    <string name="bl_country_rv">bl_country_rv</string>
    <string name="shopping_lists">Shopping lists</string>
    <string name="trash">Trash</string>
    <string name="choose_how_long_you_want_to_keep_the_deleted_lists_in_trash_temporarily">Choose how long you want to keep the deleted lists in trash temporarily</string>
    <string name="trash_setting_btn">trash setting btn</string>
    <string name="barcode_scanner">Barcode scanner</string>
    <string name="enable_disable_beep">Enable/Disable beep</string>
    <string name="enable_or_disable_beep_voice_after_successful_scan">enable or disable beep voice after successful scan</string>
    <string name="auto_check_items">Auto check items</string>
    <string name="list_items_will_be_checked_as_you_scan_the_products">List items will be checked as you scan the products</string>
    <string name="prices">Prices</string>
    <string name="multiply_price_x_quantity">Multiply (Price x Quantity)</string>
    <string name="when_entering_product_price">When entering product price</string>
    <string name="general">General</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="got_problem_scanning">Got problem scanning?</string>
    <string name="version">Version</string>
    <string name="search">More Info</string>
    <string name="boycott">Boycott</string>
    <string name="product_info">Product Info</string>
    <string name="scan_again">Scan again</string>
    <string name="rescan_btn">rescan_btn</string>
    <string name="blacklisted">BLACKLISTED!</string>
    <string name="stop_boycott">Stop boycott</string>
    <string name="add_list">Add List</string>
    <string name="new_list">New List</string>
    <string name="create_list_btn">create list btn</string>
    <string name="create">Create</string>
    <string name="color_iv">color_iv</string>
    <string name="expo_menu_iv">expo_menu_iv</string>
    <string name="slider_icon">slider_icon</string>
    <string name="product_or_manufacturer_name">product/manufacturer name</string>
    <string name="del_btn">del_btn</string>
    <string name="restore_list_btn">restore_list_btn</string>
</resources>