<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/warningCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/mini_corner"
    app:strokeWidth="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/blockedTitleTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/blacklisted"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/blacklistedCloseInfoDialogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/close_button"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_round_close_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/blacklistedCodeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp" />

        <TextView
            android:id="@+id/blacklistedTypeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp" />

        <TextView
            android:id="@+id/blacklistedNameTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp" />

        <TextView
            android:id="@+id/blacklistedStatusTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/blacklistedInfoBtn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/search"
                app:backgroundTint="@color/blueCard"
                app:icon="@drawable/ic_round_public_24"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/stopBoycottBtn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/stop_boycott"
                app:backgroundTint="@color/greenCard"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/blacklistedScanAgainBtn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/rescan_btn"
                android:src="@drawable/ic_round_replay_24"
                android:text="@string/scan_again"
                app:tint="@color/colorOnPrimary"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>