<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/mini_corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/product_info"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/closeInfoDialogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/close_button"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_round_close_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/resultCodeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp" />

        <TextView
            android:id="@+id/resultTypeTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp" />

        <TextView
            android:id="@+id/resultCountryTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/infoBtn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/search"
                app:backgroundTint="@color/blueCard"
                app:icon="@drawable/ic_round_public_24"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/revealBoycottBtn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:text="@string/boycott"
                app:backgroundTint="@color/redCard"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/scanAgainBtn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:backgroundTint="@color/colorPrimary"
                android:contentDescription="@string/rescan_btn"
                android:src="@drawable/ic_round_replay_24"
                android:text="@string/scan_again"
                app:tint="@color/colorOnPrimary"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/manufactNameDialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:hint="@string/product_or_manufacturer_name"
                android:minHeight="48dp"
                app:boxCornerRadiusBottomEnd="@dimen/et_corner"
                app:boxCornerRadiusBottomStart="@dimen/et_corner"
                app:boxCornerRadiusTopEnd="@dimen/et_corner"
                app:boxCornerRadiusTopStart="@dimen/et_corner"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconTint="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialogManufactNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minHeight="48dp"
                    android:singleLine="true"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/boycottBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/boycott"
                app:backgroundTint="@color/colorOnPrimary"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_round_check_24"
                app:tint="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>