<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addListBsd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:rippleColor="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_list"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/closeAddListBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/close_button"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_round_close_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:hint="@string/new_list"
                android:minHeight="48dp"
                app:boxCornerRadiusBottomEnd="@dimen/et_corner"
                app:boxCornerRadiusBottomStart="@dimen/et_corner"
                app:boxCornerRadiusTopEnd="@dimen/et_corner"
                app:boxCornerRadiusTopStart="@dimen/et_corner"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconTint="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/listNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:maxLength="80"
                    android:singleLine="true"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/createListBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:clickable="true"
                app:backgroundTint="@color/colorPrimary"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_round_check_24"
                app:tint="@color/colorOnPrimary"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/showCategoryBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:text="@string/show_category"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/categoryArrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_round_arrow_drop_down_24" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commonEmojisRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:overScrollMode="never"
            android:visibility="gone" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>